fix close button on mobile menu

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -114,8 +114,8 @@
       color: white;
       cursor: pointer;
       z-index: 3;
-      width: 70%;
-      height: 40%;
+      width: 50%;
+      height: 20%;
       -webkit-tap-highlight-color:transparent;
   }
 
